--- a/index.html
+++ b/index.html
@@ -1,1 +1,212 @@
-haloijojo;
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Produk Editor dengan Toggle</title>
+  <style>
+    /* Basic Styles for Form and Popup */
+    body {
+      font-family: Arial, sans-serif;
+    }
+
+    .product-container {
+      margin: 20px;
+      padding: 10px;
+      border: 1px solid #ccc;
+      border-radius: 8px;
+      width: 300px;
+      margin-bottom: 20px;
+    }
+
+    .product-container img {
+      width: 100%;
+      height: auto;
+      border-radius: 8px;
+    }
+
+    .product-container h3 {
+      font-size: 18px;
+    }
+
+    .product-container p {
+      color: #ff0000;
+    }
+
+    .product-form input, .product-form textarea {
+      width: 100%;
+      padding: 8px;
+      margin: 5px 0;
+    }
+
+    .product-form button {
+      background-color: #ff6700;
+      color: white;
+      padding: 10px 15px;
+      cursor: pointer;
+      border: none;
+      border-radius: 5px;
+    }
+
+    .product-form button:hover {
+      background-color: #e55d00;
+    }
+
+    /* Toggle switch style */
+    .toggle-switch {
+      position: relative;
+      display: inline-block;
+      width: 50px;
+      height: 24px;
+    }
+
+    .toggle-switch input {
+      opacity: 0;
+      width: 0;
+      height: 0;
+    }
+
+    .slider {
+      position: absolute;
+      cursor: pointer;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background-color: #ccc;
+      transition: 0.4s;
+      border-radius: 34px;
+    }
+
+    .slider:before {
+      position: absolute;
+      content: "";
+      height: 16px;
+      width: 16px;
+      border-radius: 50%;
+      left: 4px;
+      bottom: 4px;
+      background-color: white;
+      transition: 0.4s;
+    }
+
+    input:checked + .slider {
+      background-color: #4caf50;
+    }
+
+    input:checked + .slider:before {
+      transform: translateX(26px);
+    }
+
+  </style>
+</head>
+<body>
+
+  <h2>Produk Editor dengan Toggle</h2>
+
+  <div id="productList"></div>
+
+  <div class="product-form">
+    <h3>Edit Produk</h3>
+    <label for="productName">Nama Produk:</label>
+    <input type="text" id="productName" placeholder="Nama Produk">
+
+    <label for="productURL">URL Produk:</label>
+    <input type="text" id="productURL" placeholder="URL Produk">
+
+    <label for="imageURL">URL Gambar Produk:</label>
+    <input type="text" id="imageURL" placeholder="URL Gambar Produk">
+
+    <label for="discount">Diskon:</label>
+    <input type="text" id="discount" placeholder="Diskon">
+
+    <label for="display">Tampilkan Produk:</label>
+    <input type="checkbox" id="display">
+
+    <button id="saveProduct">Simpan Produk</button>
+  </div>
+
+  <script>
+    const productDataURL = 'https://raw.githubusercontent.com/dewacuanaja/prill/refs/heads/main/test.json'; // Ganti dengan URL JSON Anda
+    let products = [];
+
+    // Ambil data produk dari JSON
+    function fetchProductData() {
+      fetch(productDataURL)
+        .then(response => response.json())
+        .then(data => {
+          products = data.products;
+          renderProductList();
+        })
+        .catch(error => console.error('Error loading product data:', error));
+    }
+
+    // Tampilkan daftar produk
+    function renderProductList() {
+      const productListContainer = document.getElementById('productList');
+      productListContainer.innerHTML = ''; // Clear existing product list
+
+      products.forEach(product => {
+        const productDiv = document.createElement('div');
+        productDiv.classList.add('product-container');
+        productDiv.innerHTML = `
+          <h3>${product.productName}</h3>
+          <img src="${product.imageURL}" alt="${product.productName}">
+          <p>${product.discount}</p>
+          <p>URL: <a href="${product.productURL}" target="_blank">${product.productURL}</a></p>
+          
+          <label for="displayToggle${product.id}">Tampilkan Produk: </label>
+          <label class="toggle-switch">
+            <input type="checkbox" id="displayToggle${product.id}" ${product.display ? 'checked' : ''} onclick="toggleDisplay(${product.id})">
+            <span class="slider"></span>
+          </label>
+          <button onclick="editProduct(${product.id})">Edit Produk</button>
+        `;
+        productListContainer.appendChild(productDiv);
+      });
+    }
+
+    // Fungsi untuk mengedit produk
+    function editProduct(productId) {
+      const product = products.find(p => p.id === productId);
+      if (product) {
+        document.getElementById('productName').value = product.productName;
+        document.getElementById('productURL').value = product.productURL;
+        document.getElementById('imageURL').value = product.imageURL;
+        document.getElementById('discount').value = product.discount;
+        document.getElementById('display').checked = product.display;
+
+        document.getElementById('saveProduct').onclick = () => saveProduct(productId);
+      }
+    }
+
+    // Simpan perubahan produk
+    function saveProduct(productId) {
+      const product = products.find(p => p.id === productId);
+      if (product) {
+        product.productName = document.getElementById('productName').value;
+        product.productURL = document.getElementById('productURL').value;
+        product.imageURL = document.getElementById('imageURL').value;
+        product.discount = document.getElementById('discount').value;
+        product.display = document.getElementById('display').checked;
+
+        alert('Produk berhasil disimpan!');
+        renderProductList(); // Render ulang daftar produk setelah disimpan
+      }
+    }
+
+    // Fungsi untuk toggle display produk
+    function toggleDisplay(productId) {
+      const product = products.find(p => p.id === productId);
+      if (product) {
+        product.display = !product.display; // Toggle display value
+        alert(`Produk ${product.display ? 'Ditampilkan' : 'Disembunyikan'}`);
+      }
+    }
+
+    // Ambil data produk saat halaman dimuat
+    window.onload = fetchProductData;
+  </script>
+
+</body>
+</html>
