--- a/index.html
+++ b/index.html
@@ -4,18 +4,33 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Produk Editor dengan Toggle</title>
+
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+
   <style>
-    /* Basic Styles for Form and Popup */
+    /* Styling dasar menggunakan font Poppins */
     body {
-      font-family: Arial, sans-serif;
+      font-family: 'Poppins', sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #f4f4f4;
+    }
+
+    h2 {
+      text-align: center;
+      margin-top: 20px;
+      color: #333;
     }
 
     .product-container {
-      margin: 20px;
-      padding: 10px;
-      border: 1px solid #ccc;
-      border-radius: 8px;
-      width: 300px;
+      margin: 20px auto;
+      padding: 20px;
+      border-radius: 10px;
+      background-color: white;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      width: 90%;
+      max-width: 400px;
       margin-bottom: 20px;
     }
 
@@ -23,36 +38,71 @@
       width: 100%;
       height: auto;
       border-radius: 8px;
+      margin-bottom: 15px;
     }
 
     .product-container h3 {
-      font-size: 18px;
+      font-size: 20px;
+      font-weight: 600;
+      color: #333;
+      margin-bottom: 10px;
     }
 
     .product-container p {
-      color: #ff0000;
+      color: #ff5722;
+      font-weight: 500;
     }
 
-    .product-form input, .product-form textarea {
+    .product-container a {
+      color: #0073e6;
+      text-decoration: none;
+    }
+
+    .product-container a:hover {
+      text-decoration: underline;
+    }
+
+    /* Styling untuk form edit produk */
+    .product-form {
+      background-color: white;
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      width: 90%;
+      max-width: 400px;
+      margin: 20px auto;
+    }
+
+    .product-form label {
+      font-weight: 500;
+      margin-bottom: 5px;
+      display: block;
+    }
+
+    .product-form input {
       width: 100%;
-      padding: 8px;
-      margin: 5px 0;
-    }
-
-    .product-form button {
-      background-color: #ff6700;
-      color: white;
-      padding: 10px 15px;
-      cursor: pointer;
-      border: none;
+      padding: 10px;
+      margin: 10px 0;
+      border: 1px solid #ddd;
       border-radius: 5px;
     }
 
-    .product-form button:hover {
-      background-color: #e55d00;
+    .product-form button {
+      background-color: #4caf50;
+      color: white;
+      padding: 12px 20px;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      width: 100%;
+      font-weight: 600;
     }
 
-    /* Toggle switch style */
+    .product-form button:hover {
+      background-color: #45a049;
+    }
+
+    /* Toggle switch styling */
     .toggle-switch {
       position: relative;
       display: inline-block;
@@ -106,6 +156,7 @@
 
   <div id="productList"></div>
 
+  <!-- Form untuk mengedit produk -->
   <div class="product-form">
     <h3>Edit Produk</h3>
     <label for="productName">Nama Produk:</label>
@@ -127,7 +178,7 @@
   </div>
 
   <script>
-    const productDataURL = 'https://raw.githubusercontent.com/dewacuanaja/prill/refs/heads/main/test.json'; // Ganti dengan URL JSON Anda
+    const productDataURL = './assets/test.json'; // Ganti dengan relative path jika file JSON di folder yang sama
     let products = [];
 
     // Ambil data produk dari JSON
