--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Produk Editor dengan Toggle</title>
   <style>
+    /* Basic Styles for Form and Popup */
     body {
       font-family: Arial, sans-serif;
     }
@@ -126,7 +127,7 @@
   </div>
 
   <script>
-    const productDataURL = 'https://raw.githubusercontent.com/dewacuanaja/prill/main/test.json'; // Ganti dengan URL JSON Anda
+    const productDataURL = 'https://raw.githubusercontent.com/dewacuanaja/prill/refs/heads/main/test.json'; // Ganti dengan URL JSON Anda
     let products = [];
 
     // Ambil data produk dari JSON
@@ -134,13 +135,7 @@
       fetch(productDataURL)
         .then(response => response.json())
         .then(data => {
-          // Cek apakah data produk sudah ada di localStorage, jika ada, ambil dari sana
-          const savedProducts = localStorage.getItem('products');
-          if (savedProducts) {
-            products = JSON.parse(savedProducts);
-          } else {
-            products = data.products;
-          }
+          products = data.products;
           renderProductList();
         })
         .catch(error => console.error('Error loading product data:', error));
@@ -185,7 +180,7 @@
       }
     }
 
-    // Simpan perubahan produk ke localStorage
+    // Simpan perubahan produk
     function saveProduct(productId) {
       const product = products.find(p => p.id === productId);
       if (product) {
@@ -195,11 +190,11 @@
         product.discount = document.getElementById('discount').value;
         product.display = document.getElementById('display').checked;
 
-        // Simpan ke localStorage
-        localStorage.setItem('products', JSON.stringify(products));
-
         alert('Produk berhasil disimpan!');
         renderProductList(); // Render ulang daftar produk setelah disimpan
+
+        // Simpan ke GitHub atau database lain di sini
+        saveToGitHubJSON();
       }
     }
 
@@ -210,9 +205,33 @@
         product.display = !product.display; // Toggle display value
         alert(`Produk ${product.display ? 'Ditampilkan' : 'Disembunyikan'}`);
         
-        // Simpan perubahan ke localStorage
-        localStorage.setItem('products', JSON.stringify(products));
+        // Simpan perubahan ke GitHub atau database lain
+        saveToGitHubJSON();
       }
+    }
+
+    // Fungsi untuk menyimpan data produk ke GitHub
+    function saveToGitHubJSON() {
+      const jsonData = JSON.stringify({ products: products });
+      fetch('https://api.github.com/repos/dewacuanaja/prill/contents/test.json', {
+        method: 'PUT',
+        headers: {
+          'Authorization': `token YOUR_GITHUB_TOKEN`, // Ganti dengan token GitHub Anda
+          'Content-Type': 'application/json',
+        },
+        body: JSON.stringify({
+          message: "Update product data",
+          content: btoa(jsonData),
+          sha: "SHA_OF_EXISTING_JSON" // Ganti dengan SHA dari file JSON yang ada
+        })
+      })
+      .then(response => response.json())
+      .then(data => {
+        console.log("Data berhasil disimpan ke GitHub", data);
+      })
+      .catch(error => {
+        console.error("Error saat menyimpan data ke GitHub:", error);
+      });
     }
 
     // Ambil data produk saat halaman dimuat
@@ -221,3 +240,4 @@
 
 </body>
 </html>
+
